Laplacian Deform Crash When Parent With Automatic Weight #38859

Closed
opened 2014-02-27 01:36:21 +01:00 by Harrison Yu · 7 comments

System Information
windows 7 pro 64bit , GTX580

Blender Version
Broken:2.70 testbuild1

Short description of error
Parenting with automatic weight crash when mesh with working Laplacian Deform modifier

Exact steps for others to reproduce the error
1.Add an armature and add modifer to default cube,and paint some weight.
2.Add Laplacian Deform ,setup weight group for it and bind.
3.Parent cube to armature with automatic weight crash blender.

Laplacian Deform Crash When Parent With Automatic Weight.crash.txt

Blender 2.69 (sub 11), Commit date: 2014-02-20 05:32, Hash 4789793 bpy.ops.object.parent_set(type='ARMATURE_AUTO') # Operator

**System Information** windows 7 pro 64bit , GTX580 **Blender Version** Broken:2.70 testbuild1 **Short description of error** Parenting with automatic weight crash when mesh with working Laplacian Deform modifier **Exact steps for others to reproduce the error** 1.Add an armature and add modifer to default cube,and paint some weight. 2.Add Laplacian Deform ,setup weight group for it and bind. 3.Parent cube to armature with automatic weight crash blender. Laplacian Deform Crash When Parent With Automatic Weight.crash.txt # Blender 2.69 (sub 11), Commit date: 2014-02-20 05:32, Hash 4789793 bpy.ops.object.parent_set(type='ARMATURE_AUTO') # Operator
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @YonghaiYu

Added subscriber: @YonghaiYu
Author
[Laplacian_Deform_Crash_When_Parent_With_Automatic_Weight.blend](https://archive.blender.org/developer/F79068/Laplacian_Deform_Crash_When_Parent_With_Automatic_Weight.blend) [Laplacian_Deform_Crash_When_Parent_With_Automatic_Weight.crash.txt](https://archive.blender.org/developer/F79069/Laplacian_Deform_Crash_When_Parent_With_Automatic_Weight.crash.txt)

This issue was referenced by blender/blender-addons-contrib@6f6be7c936

This issue was referenced by blender/blender-addons-contrib@6f6be7c936d979033f96d3eb975884d580532453

This issue was referenced by 6f6be7c936

This issue was referenced by 6f6be7c936d979033f96d3eb975884d580532453

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 6f6be7c936.

Closed by commit 6f6be7c936.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38859
No description provided.