Fix T38859: Laplacian Deform Crash